--- a/professional-portfolio/src/styles/navigation.css
+++ b/professional-portfolio/src/styles/navigation.css
@@ -1,22 +1,23 @@
 .navbar {
-    background: #219ebc;
-    height: 60px;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 20px;
-  }
-
-.navbar a {
-    color: black;
-    font-size: .9rem;
-    text-decoration: none;
-    font-weight: bold;
+  background: #219ebc;
+  height: 60px;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 20px;
 }
 
-.navbar a:hover {
-    color: white;
+.nav-link {
+  color: black;
+  font-size: 0.9rem;
+  text-decoration: none;
+  font-weight: bold;
 }
 
-.navbar a:active { 
-    color: white;
+.nav-link:hover {
+  color: white;
+}
+
+.nav-link.active {
+  background-color: #212529 !important;
+  font-weight: bold;
 }
